Re-ran Prajakta's notebook

--- a/working_notebook_dhruv.ipynb
+++ b/working_notebook_dhruv.ipynb
@@ -467,188 +467,13 @@
     }
    ],
    "source": [
+    "# Remove names\n",
     "fomc_data.text = fomc_data.text.apply(remove_names_from_minutes)\n",
-    "fomc_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>document_kind</th>\n",
-       "      <th>meeting_date</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>text</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2947</th>\n",
-       "      <td>minutes_of_actions</td>\n",
-       "      <td>1985-02-13</td>\n",
-       "      <td>1985-03-15</td>\n",
-       "      <td>vote gerald corrigan elected serve vice chairm...</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2960</th>\n",
-       "      <td>minutes_of_actions</td>\n",
-       "      <td>1985-03-26</td>\n",
-       "      <td>1985-04-25</td>\n",
-       "      <td>vote following officers open market elected se...</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2968</th>\n",
-       "      <td>minutes_of_actions</td>\n",
-       "      <td>1985-05-21</td>\n",
-       "      <td>1985-06-20</td>\n",
-       "      <td>vote actions taken open market held march appr...</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2982</th>\n",
-       "      <td>minutes_of_actions</td>\n",
-       "      <td>1985-07-10</td>\n",
-       "      <td>1985-08-09</td>\n",
-       "      <td>vote actions taken open market held approved</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2992</th>\n",
-       "      <td>minutes_of_actions</td>\n",
-       "      <td>1985-08-20</td>\n",
-       "      <td>1985-09-19</td>\n",
-       "      <td>vote actions taken open market held july approved</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5933</th>\n",
-       "      <td>minutes</td>\n",
-       "      <td>2022-12-14</td>\n",
-       "      <td>2023-01-04</td>\n",
-       "      <td>vote selected richard ostrander serve deputy g...</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5936</th>\n",
-       "      <td>minutes</td>\n",
-       "      <td>2023-02-01</td>\n",
-       "      <td>2023-02-22</td>\n",
-       "      <td>vote following officers selected serve selecti...</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5940</th>\n",
-       "      <td>minutes</td>\n",
-       "      <td>2023-03-22</td>\n",
-       "      <td>2023-04-12</td>\n",
-       "      <td>turned review financial market developments in...</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5946</th>\n",
-       "      <td>minutes</td>\n",
-       "      <td>2023-05-03</td>\n",
-       "      <td>2023-05-24</td>\n",
-       "      <td>turned review developments financial markets a...</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5953</th>\n",
-       "      <td>minutes</td>\n",
-       "      <td>2023-06-14</td>\n",
-       "      <td>2023-07-05</td>\n",
-       "      <td>turned review developments financial markets r...</td>\n",
-       "      <td>https://www.federalreserve.gov/monetarypolicy/...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>309 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           document_kind meeting_date release_date  \\\n",
-       "2947  minutes_of_actions   1985-02-13   1985-03-15   \n",
-       "2960  minutes_of_actions   1985-03-26   1985-04-25   \n",
-       "2968  minutes_of_actions   1985-05-21   1985-06-20   \n",
-       "2982  minutes_of_actions   1985-07-10   1985-08-09   \n",
-       "2992  minutes_of_actions   1985-08-20   1985-09-19   \n",
-       "...                  ...          ...          ...   \n",
-       "5933             minutes   2022-12-14   2023-01-04   \n",
-       "5936             minutes   2023-02-01   2023-02-22   \n",
-       "5940             minutes   2023-03-22   2023-04-12   \n",
-       "5946             minutes   2023-05-03   2023-05-24   \n",
-       "5953             minutes   2023-06-14   2023-07-05   \n",
-       "\n",
-       "                                                   text  \\\n",
-       "2947  vote gerald corrigan elected serve vice chairm...   \n",
-       "2960  vote following officers open market elected se...   \n",
-       "2968  vote actions taken open market held march appr...   \n",
-       "2982       vote actions taken open market held approved   \n",
-       "2992  vote actions taken open market held july approved   \n",
-       "...                                                 ...   \n",
-       "5933  vote selected richard ostrander serve deputy g...   \n",
-       "5936  vote following officers selected serve selecti...   \n",
-       "5940  turned review financial market developments in...   \n",
-       "5946  turned review developments financial markets a...   \n",
-       "5953  turned review developments financial markets r...   \n",
-       "\n",
-       "                                                    url  \n",
-       "2947  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "2960  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "2968  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "2982  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "2992  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "...                                                 ...  \n",
-       "5933  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "5936  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "5940  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "5946  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "5953  https://www.federalreserve.gov/monetarypolicy/...  \n",
-       "\n",
-       "[309 rows x 5 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "\n",
     "# Remove stop-words\n",
     "fomc_data.text = fomc_data.text.apply(tokenizer_wo_stopwords)\n",
-    "display(fomc_data)"
+    "\n",
+    "fomc_data"
    ]
   },
   {
